fixed header align for small ios devices

--- a/app/styles/geotrek-mobile.scss
+++ b/app/styles/geotrek-mobile.scss
@@ -103,6 +103,14 @@ h1.app-title, .button.button-icon.app-title {
   }
 }
 
+.bar-header .row > * {
+    padding: 0;
+}
+
+h1.app-title {
+    line-height: 2em;
+}
+
 .list .item-toggle {
     padding: 8px;
 }
